# plottr

./: .gitattributes  .gitignore  Client Examples.ipynb  Data model.ipynb  Examples.ipynb  MANIFEST.in  PERFORMANCE_PLAN.md  README.md  Testing data structures.ipynb  dataset2 testing.ipynb  inspectr.bat  inspectr.py  mypy.ini  plottr.bat  plottr.py  pyproject.toml  pyqtgraph tests.ipynb  readthedocs.yml  requirements.txt  sender.ipynb  setup.cfg  setup.py  test.ipynb  test_requirements.txt
.github/actions/install-dependencies-and-plottr/: action.yml
.github/workflow/: python-app.yml
.github/workflows/: python-app.yml  python-release.yml
analyzer/fitters/: CosineFit.py  __init__.py  fitter_base.py
analyzer/others/: find_max.py
apps/: autoplot_ddh5.py  inspectr.py  monitr.py
apps/templates/: autoplot_ddh5.bat
config/: plottr_default.mplstyle
doc/: Basic data inspection -- data selection and autoplot.ipynb  Basic plotting needs for qubit data.html  Basic plotting needs for qubit data.ipynb  Client Examples.ipynb  Interactive data inspection -- data selection and autoplot.ipynb  Live plotting qcodes data.ipynb  conf.py  data.py  dataformat.rst  examples.rst  index.rst  intro.rst  live_plotting_for_QCoDeS.ipynb  nodes.rst  plotnode.rst  requirements.txt
doc/api/: data.rst  index.rst  node.rst  plot.rst
doc/concepts/: data.rst  index.rst  nodes.rst
doc/examples/: Basic operation of DDH5 and benchmarking.ipynb  Inferring grids.ipynb  Interactive data inspection -- data selection and autoplot.ipynb  Live plotting qcodes data.ipynb  Simple Live plotting example with DDH5.ipynb  autonode_app.py  node_with_dimension_selector_widget.py
doc/nodes/: index.rst
doc/source/: conf.py  dataformat.rst  index.rst  nodes.rst
doc/source/concepts/: dataformat.rst  nodes.rst
docs/superpowers/plans/: 2026-04-14-uv-migration.md
docs/superpowers/specs/: 2026-04-14-uv-migration-design.md
plottr/: __init__.py  _version.py  apps.py  client.py  config.py  icons.py  inspectr.py  log.py  node.py  plottr.py  py.typed  qcodes.py  qcodes_dataset.py  qcodes_dataset_inspectr.py  test_data.py  tools.py  widgets.py
plottr/analyzer/: base.py
plottr/analyzer/fitters/: __init__.py  experiment_functions.py  fitter_base.py  generic_functions.py
plottr/analyzer/others/: find_max.py
plottr/apps/: appmanager.py  apprunner.py  autoplot.py  inspectr.py  json_veiwer.py  json_viewer.py  monitr.py  tools.py  watchdog_classes.py
plottr/apps/ui/: Monitr_UI.py  monitr.py  monitr.ui
plottr/config/: plottrcfg_main.py
plottr/data/: __init__.py  _qcodes_db_overview.py  datadict.py  datadict_storage.py  qcodes.py  qcodes_dataset.py  qcodes_db_overview.py
plottr/gui/: __init__.py  data_display.py  icons.py  lineplot.py  mpl.py  plots.py  tools.py  ui_lineplot.py  widgets.py
plottr/gui/plots/: lineplot.py  ui_lineplot.py
plottr/gui/ui/: lineplot.ui
plottr/node/: __init__.py  _old.py  autonode.py  data_selector.py  differentiation.py  dim_reducer.py  fitter.py  fitter_2.py  grid.py  histogram.py  node.py  scaleunits.py  tools.py
plottr/node/filter/: correct_offset.py
plottr/plot/: __init__.py  base.py  mpl.py
plottr/plot/mpl/: __init__.py  autoplot.py  plot_funcs.py  plotting.py  utils.py  widgets.py
plottr/utils/: __init__.py  data.py  find_scale_and_prefix.py  latex.py  misc.py  num.py  testdata.py
test/: Client Examples.ipynb  DataDict testing.ipynb  Dataset2 testing.ipynb  Loading qcodes data.ipynb  Test DimReducer.ipynb  Test Gridder.ipynb  Test xySelector.ipynb  Testing Autoplot.ipynb  Testing dataselector.ipynb  Untitled.ipynb  Working with QCodes data.ipynb  Working with data.ipynb  _Scribbles.ipynb  autoplot_app.py  common.py  pyqtgraph Flowchart example.ipynb  pyqtgraph tests.ipynb  run_gui_test.py  scribbles.ipynb  test_data_selector.py  test_subtract_average_from_row_column_for_2D_data.ipynb
test/apps/: autoplot_app.py  custom_app.py  fitter_test.py  test_histograms.py
test/common/: data.py
test/gui/: Data selection and Autoplot.ipynb  Data selection node using pyqtgraph.ipynb  Data selection node v1.ipynb  Data selection node v2.ipynb  Data selection node.ipynb  Messing with classes.ipynb  Testing Autoplot.ipynb  Testing elementary nodes.ipynb  Testing individual node widgets.ipynb  Testing node widgets.ipynb  Untitled1.ipynb  _Scribbles.ipynb  appman.py  correct_offset.py  data_display_widgets.py  data_selector.py  ddh5_loader.py  dimension_assignment.py  dimension_assignment_widgets.py  dimension_selection_widgets.py  grid_options.py  lineplot.py  lineplot_interactive.py  mpl_autoplot.py  mpl_figuremaker.py  multi_axis_selection_widget.py  pyqtgraph A simple custom node.ipynb  pyqtgraph Flowchart example.ipynb  pyqtgraph_figuremaker.py  pyqtgraph_testing.py  run_gui_test.py  simple_2d_plot.py  test_data.py
test/notebooks/: DataDict testing.ipynb  Easy generation of nodes.ipynb  Loading qcodes data.ipynb  Saving and loading Qcodes data.ipynb  Test DataSelector.ipynb  Test DimReducer.ipynb  Test Gridder.ipynb  Test xySelector.ipynb  Testing Autoplot.ipynb  Testing plot widgets.ipynb  fixing grids and find vertices.ipynb
test/prototype/: Analyzer prototype.ipynb  test_analyzer_module.py  test_temnp.py
test/prototyping/: autoplot testing.ipynb  collapsible widget.ipynb  new_data_methods.ipynb  plottrcfg_main.py  swmrtest.py  test_data.py
test/pytest/: conftest.py  test_app_manager.py  test_correct_offset.py  test_data_dict.py  test_data_dict_base.py  test_data_dict_basic_fns.py  test_data_selector.py  test_datadict_copy_semantics.py  test_ddh5.py  test_dim_reducer.py  test_gridder.py  test_gridder_comprehensive.py  test_gui_figuremaker.py  test_gui_nodes.py  test_gui_widgets.py  test_histogrammer.py  test_latex.py  test_meshgrid_data_dict.py  test_misc_utils.py  test_monitr_filtering.py  test_nodes.py  test_numtools.py  test_pipeline_coverage.py  test_plotting.py  test_qcodes_data.py  test_qcodes_flow.py  test_regressions.py  test_round2_optimizations.py  test_scale_units.py
test/scripts/: h5py_concurrent_rw_lock.py  h5py_concurrent_rw_swmr.py
(+9 files in other folders)
