[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
    "versioningit >= 1.1.0"
]
build-backend = 'setuptools.build_meta'

[tool.mypy]
strict_optional = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true
enable_error_code = "ignore-without-code"

# This module is auto generated so types
# are hard to fix
[[tool.mypy.overrides]]
module = [
    "plottr.apps.ui.Monitr_UI",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "h5py",
    "lmfit",
    "matplotlib.*",
    "pyqtgraph.*",
    "xhistogram.*",
]
ignore_missing_imports = true

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance-dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.onbuild]
source-file = "plottr/_version.py"
build-file = "plottr/_version.py"
