[build-system]
requires = ["setuptools>=68.1", "versioningit >= 2.2.1",]
build-backend = "setuptools.build_meta"

[project]
name = "plottr"
description = "A tool for live plotting and processing data"
authors = [{name = "Wolfgang Pfaff", email = "wolfgangpfff@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=0.22",
    "xarray",
    "pyqtgraph>=0.12.1",
    "matplotlib>=3.0.0",
    "numpy>=1.12.0",
    "lmfit>=1.0",
    "h5py>=2.10.0",
    "qtpy>=1.9.0",
    "typing-extensions>=3.7.4.3",
    "packaging>=20.0",
    "xhistogram>=0.3.0",
    "versioningit>=1.1.0",
    "psutil",
    "watchdog",
    "pyzmq",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/toolsforexperiments/plottr"
Documentation = "https://plottr.readthedocs.io"
Source = "https://github.com/toolsforexperiments/plottr/"
Tracker = "https://github.com/toolsforexperiments/plottr/issues"

[project.optional-dependencies]
pyqt5 = ["PyQt5"]
pyqt6 = ["PyQt6"]
pyside2 = ["PySide2>=5.12"]
pyside6 = ["PySide6>=6.0"]
qcodes = ["qcodes>=0.54.1"]

[project.scripts]
plottr-monitr = "plottr.apps.monitr:script"
plottr-inspectr = "plottr.apps.inspectr:script"
plottr-autoplot-ddh5 = "plottr.apps.autoplot:script"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
plottr = [
    "resource/gfx/*",
    "py.typed",
]

[tool.setuptools.packages.find]
include = ["plottr*"]
namespaces = false

[tool.setuptools.cmdclass]
sdist = "versioningit.cmdclass.sdist"
build_py = "versioningit.cmdclass.build_py"

[tool.mypy]
strict_optional = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
show_error_codes = true
enable_error_code = "ignore-without-code"

# This module is auto generated so types are hard to fix
[[tool.mypy.overrides]]
module = [
    "plottr.apps.ui.Monitr_UI",
]
ignore_errors = true

# Qt enum access patterns differ between PyQt5/qtpy and PySide6 type stubs.
# At runtime, qtpy provides compatibility, but mypy sees PySide6 nested enums.
# We disable attr-defined errors for plottr modules to allow old-style enum access
# (e.g., Qt.DisplayRole instead of Qt.ItemDataRole.DisplayRole) which works at runtime.
[[tool.mypy.overrides]]
module = [
    "plottr.*",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "h5py",
    "lmfit",
    "matplotlib.*",
    "pyqtgraph.*",
    "xhistogram.*",
    "ruamel.*"
]
ignore_missing_imports = true

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance-dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.onbuild]
source-file = "plottr/_version.py"
build-file = "plottr/_version.py"
