[metadata]
name = plottr
description = A tool for live plotting and processing data
long_description = file: README.md
long_description_content_type = text/markdown
author = Wolfgang Pfaff
author_email = wolfgangpfff@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = MIT
url = https://github.com/toolsforexperiments/plottr
project_urls =
    Documentation = https://plottr.readthedocs.io
    Source = https://github.com/toolsforexperiments/plottr/
    Tracker = https://github.com/toolsforexperiments/plottr/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=0.22
    xarray
    pyqtgraph>=0.10.0
    matplotlib
    numpy
    lmfit
    h5py>=2.10.0
    qtpy>=1.9.0
    typing-extensions>=3.7.4.3
    packaging>=20.0

[options.package_data]
plottr =
 resource/gfx/*

[options.extras_require]
PyQt5 = PyQt5
PySide2 = PySide2

[options.packages.find]
include =
    plottr*

[options.entry_points]
console_scripts =
    plottr-monitr = plottr.apps.monitr:script
    plottr-inspectr = plottr.apps.inspectr:script
    plottr-autoplot-ddh5 = plottr.apps.autoplot:script

[versioneer]
VCS = git
style = pep440
versionfile_source = plottr/_version.py
versionfile_build = plottr/_version.py
tag_prefix = v
parentdir_prefix = plottr-

[mypy]
strict_optional = True
ignore_missing_imports = True
show_column_numbers = True
warn_unused_ignores = True
warn_unused_configs = True
warn_redundant_casts = True
no_implicit_optional = True

[mypy-plottr.*]
disallow_untyped_defs = True

[mypy-plottr._version]
ignore_errors = True
