[metadata]
name = plottr
description = A tool for live plotting and processing data
long_description = file: README.md
long_description_content_type = text/markdown
author = Wolfgang Pfaff
author_email = wolfgangpfff@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = MIT
url = https://github.com/toolsforexperiments/plottr
project_urls =
    Documentation = https://plottr.readthedocs.io
    Source = https://github.com/toolsforexperiments/plottr/
    Tracker = https://github.com/toolsforexperiments/plottr/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=0.22
    xarray
    pyqtgraph>=0.12.1
    matplotlib>=3.0.0
    numpy>=1.12.0
    lmfit>=1.0
    h5py>=2.10.0
    qtpy>=1.9.0
    typing-extensions>=3.7.4.3
    packaging>=20.0
    xhistogram>=0.3.0

[options.package_data]
plottr =
    resource/gfx/*
    py.typed

[options.extras_require]
PyQt5 = PyQt5
PySide2 = PySide2>=5.12

[options.packages.find]
include =
    plottr*

[options.entry_points]
console_scripts =
    plottr-monitr = plottr.apps.monitr:script
    plottr-inspectr = plottr.apps.inspectr:script
    plottr-autoplot-ddh5 = plottr.apps.autoplot:script

[versioneer]
VCS = git
style = pep440
versionfile_source = plottr/_version.py
versionfile_build = plottr/_version.py
tag_prefix = v
parentdir_prefix = plottr-
